--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
+    "i": "^0.3.7",
     "next": "11.1.2",
     "next-i18next": "^9.1.0",
     "next-seo": "^4.28.1",
@@ -36,6 +37,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
+    "react-items-carousel": "^2.8.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "sharp": "^0.29.3",
