--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-fetch": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-forms-hooks": "^1.2.2",
     "react-google-recaptcha-v3": "^1.9.7",
     "react-items-carousel": "^2.8.0",
     "react-swipeable-views": "^0.14.0",
