--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "sharp": "^0.29.3",
+    "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
